--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -62,7 +62,6 @@ steps:
   args:
     - 'run'
     - 'deploy'
-
     - 'orchestratorservice'
     - '--image'
     - '${_REGION}-docker.pkg.dev/${_GCP_PROJECT_ID}/${_ARTIFACT_REGISTRY_REPO}/orchestratorservice:${_TAG_NAME}'
@@ -73,7 +72,7 @@ steps:
     - '--platform'
     - 'managed'
     - '--set-env-vars'
-    - 'ASPNETCORE_URLS=http://*:$PORT'
+    - 'ASPNETCORE_URLS=http://*:$$PORT' # Escaped $PORT for Cloud Build
     # - '--service-account=${_SERVICE_ACCOUNT}' # Optional: if your service needs a specific SA
     - '--quiet'
 
@@ -115,7 +114,7 @@ steps:
     - '--platform'
     - 'managed'
     - '--set-env-vars'
-    - 'ASPNETCORE_URLS=http://*:$PORT'
+    - 'ASPNETCORE_URLS=http://*:$$PORT' # Escaped $PORT for Cloud Build
     # - '--service-account=${_SERVICE_ACCOUNT}' # Optional
     - '--quiet'
 
