add --quiet to builds submit command since adding beta started asking for user input (uses defaults now)

--- a/.github/workflows/firebase-hosting-deploy-preview-pull-request.yml
+++ b/.github/workflows/firebase-hosting-deploy-preview-pull-request.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Submit Cloud Build for Services (Preview)
         run: |
-          gcloud beta builds submit --project=${{ steps.auth.outputs.project_id }} --config=cloudbuild.yaml --substitutions=_TAG_NAME=${{ github.sha }}
+          gcloud beta builds submit --quiet --project=${{ steps.auth.outputs.project_id }} --config=cloudbuild.yaml --substitutions=_TAG_NAME=${{ github.sha }}
         working-directory: . # Assuming cloudbuild.yaml is at the root
 
       #
