git commit -m "fix PORT environment variable escaping in cloudbuild.yaml and correct service account secret in firebase-hosting-merge.yml
- Change $PORT to $$PORT in cloudbuild.yaml to properly escape for Cloud Build
- Fix credentials_json to use existing FIREBASE_SERVICE_ACCOUNT_AGENT_AS_A_SERVICE_459620 secret instead of nonexistent GCP_SA_KEY"

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -72,7 +72,7 @@ steps:
     - '--platform'
     - 'managed'
     - '--set-env-vars'
-    - 'ASPNETCORE_URLS=http://*:$PORT'
+    - 'ASPNETCORE_URLS=http://*:$$PORT'
     # - '--service-account=${_SERVICE_ACCOUNT}' # Optional: if your service needs a specific SA
     - '--quiet'
 
@@ -114,7 +114,7 @@ steps:
     - '--platform'
     - 'managed'
     - '--set-env-vars'
-    - 'ASPNETCORE_URLS=http://*:$PORT'
+    - 'ASPNETCORE_URLS=http://*:$$PORT'
     # - '--service-account=${_SERVICE_ACCOUNT}' # Optional
     - '--quiet'
 
