feat: Add production configuration and deployment scripts for OrchestratorWebApp
- Created appsettings.Production.json for OrchestratorService with Google Cloud and authentication settings.
- Implemented RedirectToLogin.razor for navigation to login page.
- Developed Authentication.razor page for handling user authentication and profile display.
- Added IOrchestratorApiService interface and implementation for API communication.
- Created appsettings.Development.json and appsettings.Production.json for OrchestratorWebApp.
- Added Firebase deployment scripts (PowerShell and Bash) for building and deploying the Blazor WebAssembly app.
- Implemented scripts for setting up Google Cloud service accounts and validating production deployment.

--- a/.github/.devcontainer/devcontainer.json
+++ b/.github/.devcontainer/devcontainer.json
@@ -53,7 +53,8 @@
 			   "googlecloudtools.cloudcode",
 			   "hbenl.vscode-test-explorer",
 			   "ms-dotnettools.dotnet-maui",
-			   "ms-vscode.powershell",			
+			   "ms-vscode.powershell",			   
+			   "aliasadidev.nugetpackagemanagergui"
 			//    "pspester.pester-test",
 			//    "unoplatform.vscode"
 		   ]
