--- a/AgentService/appsettings.json
+++ b/AgentService/appsettings.json
@@ -5,5 +5,23 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "GoogleCloud": {
+    "ProjectId": "your-project-id"
+  },
+  "AgentService": {
+    "AllowedServiceEmails": "orchestrator@your-project.iam.gserviceaccount.com,agent-service@your-project.iam.gserviceaccount.com"
+  },
+  "GitHub": {
+    "AppId": "your-github-app-id",
+    "InstallationId": "your-installation-id",
+    "PrivateKeyPath": "/secrets/github-app-key.pem"
+  },
+  "Firestore": {
+    "CollectionNames": {
+      "Sessions": "sessions",
+      "Agents": "agents",
+      "Repositories": "repositories"
+    }
+  }
 }
