--- a/OrchestratorService/appsettings.Development.json
+++ b/OrchestratorService/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "GoogleCloud": {
+    "ProjectId": "your-dev-project-id"
+  },
+  "AllowedOrigins": [
+    "https://localhost:7001",
+    "https://localhost:7002",
+    "http://localhost:5000"
+  ]
 }
