--- a/OrchestratorService/appsettings.json
+++ b/OrchestratorService/appsettings.json
@@ -5,5 +5,21 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "GoogleCloud": {
+    "ProjectId": "your-project-id"
+  },
+  "Authentication": {
+    "Google": {
+      "ClientId": "your-google-client-id.apps.googleusercontent.com"
+    }
+  },
+  "AgentService": {
+    "BaseUrl": "https://agent-service-url",
+    "ServiceAccountEmail": "orchestrator@your-project.iam.gserviceaccount.com"
+  },
+  "AllowedOrigins": [
+    "https://localhost:7001",
+    "https://localhost:7002"
+  ]
 }
