--- a/firebase.json
+++ b/firebase.json
@@ -11,18 +11,63 @@
       "**/.*",
       "**/node_modules/**"
     ],
+    "headers": [
+      {
+        "source": "**/*.@(js|css|woff|woff2|ttf|otf|eot|svg|png|jpg|jpeg|gif|ico|webp)",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "public, max-age=31536000, immutable"
+          }
+        ]
+      },
+      {
+        "source": "**/service-worker.js",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "no-cache"
+          }
+        ]
+      },
+      {
+        "source": "**/*.wasm",
+        "headers": [
+          {
+            "key": "Content-Type",
+            "value": "application/wasm"
+          },
+          {
+            "key": "Cache-Control",
+            "value": "public, max-age=31536000, immutable"
+          }
+        ]
+      }
+    ],
     "rewrites": [
       {
-        "source": "/api",
+        "source": "/api/**",
         "run": {
-          "serviceId": "orchestratorservice", // "service name" (from when you deployed the container image)
-          "region": "us-west1", // optional (if omitted, default is us-central1)
-          "pinTag": true // optional (see note below)
+          "serviceId": "orchestratorservice",
+          "region": "us-west1",
+          "pinTag": false
         }
       },
       {
         "source": "**",
         "destination": "/index.html"
+      }
+    ],
+    "redirects": [
+      {
+        "source": "/login",
+        "destination": "/authentication/login",
+        "type": 301
+      },
+      {
+        "source": "/logout", 
+        "destination": "/authentication/logout",
+        "type": 301
       }
     ]
   }
