--- a/.github/.devcontainer/devcontainer.json
+++ b/.github/.devcontainer/devcontainer.json
@@ -24,7 +24,7 @@
 	// },
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "dotnet workload restore OrchestratorWebApp/OrchestratorWebApp.csproj",
+	"postCreateCommand": "sudo dotnet workload install wasm-tools",
 
 	// Configure tool-specific properties.
 	"customizations": {
@@ -61,7 +61,7 @@
 	},
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "vscode",
+	 "remoteUser": "vscode"
 	// "containerUser": "vscode"
 	
 	//"updateRemoteUserUID": 
