--- a/.github/.devcontainer/devcontainer.json
+++ b/.github/.devcontainer/devcontainer.json
@@ -62,7 +62,7 @@
 	},
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	 "remoteUser": "vscode"
+	 "remoteUser": "root"
 	// "containerUser": "vscode"
 	
 	//"updateRemoteUserUID": 
