include *.md files so they are available inside devcontainer

--- a/.dockerignore
+++ b/.dockerignore
@@ -52,10 +52,10 @@ firestore-debug.log
 # DevContainer logs
 devcontainer-open-fail.log
 
-# Scripts directory (not needed for runtime)
-scripts/
-prompts/
+## Scripts directory (not needed for runtime)
+#scripts/
+#prompts/
 
 # Documentation
-README.md
-*.md
+#README.md
+#*.md
