--- a/OrchestratorWebApp/OrchestratorWebApp.csproj
+++ b/OrchestratorWebApp/OrchestratorWebApp.csproj
@@ -32,7 +32,10 @@
     <PropertyGroup>
       <_WasmToolsInstalled Condition="'@(_WasmToolsLine)' != ''">true</_WasmToolsInstalled>
     </PropertyGroup>
-    <Message Text=".NET workload '$(WasmToolsWorkloadId)' installed status: $(_WasmToolsInstalled). Will attempt install if false." Importance="high" />
+    <Message Text=".NET workload '$(WasmToolsWorkloadId)' installed status: $(_WasmToolsInstalled). Installing wasm-tools workload...." 
+             Condition="'$(_WasmToolsInstalled)' == 'false'" Importance="high" />
+    <Message Text=".NET workload '$(WasmToolsWorkloadId)' installed status: $(_WasmToolsInstalled). Not installing wasm-tools workload." 
+             Condition="'$(_WasmToolsInstalled)' == 'true'" Importance="high" />
     <!-- Conditionally run the install command -->
     <Exec Command="dotnet workload install $(WasmToolsWorkloadId)" Condition="'$(_WasmToolsInstalled)' == 'false'" />
     <!-- <Exec Command="dotnet workload update Condition="'$(_WasmToolsInstalled)' == 'true'" /> -->
