feat: upgrade from .NET 8.0 to 9.0 and fix build issues
- Update all projects to target .NET 9.0
- Update all Dockerfiles to use .NET 9.0 base images
- Update GitHub workflows for .NET 9.0 and fix Node.js LTS version
- Update VS Code launch configurations for .NET 9.0
- Update publish profiles for .NET 9.0
- Add CreatedAt field to Orchestrator model with proper implementation
- Fix FirestoreService dependency injection registration
- Resolve OrchestratorWebApp static web assets duplicate key error

--- a/OrchestratorWebApp/Dockerfile
+++ b/OrchestratorWebApp/Dockerfile
@@ -1,10 +1,10 @@
 # See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
-FROM mcr.microsoft.com/dotnet/aspnet:8.0@sha256:c149fe7e2be3baccf3cc91e9e6cdcca0ce70f7ca30d5f90796d983ff4f27bd9a AS base
+FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
-FROM mcr.microsoft.com/dotnet/sdk:8.0@sha256:b56053d0a8f4627047740941396e76cd9e7a9421c83b1d81b68f10e5019862d7 AS build
+FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 WORKDIR /src
 COPY ["OrchestratorWebApp/OrchestratorWebApp.csproj", "OrchestratorWebApp/"]
 # Restore the WebAssembly workload
