feat: Implement document store abstraction with multiple providers
- Added IProjectStore interface for project management with validation.
- Introduced DocumentStoreOptions for configuration of document store providers.
- Created CreateAgentSessionRequest DTO for agent session creation.
- Developed DocumentStoreServiceExtensions for dependency injection of document stores.
- Implemented Firestore, LiteDB, and JSON file document repositories.
- Added AgentSession, Project, and Orchestrator domain models.
- Created AgentSessionStore and ProjectStore with validation logic.
- Implemented OrchestratorStore for orchestrator management.
- Added migration script to verify document store abstraction implementation.

--- a/AgentService/appsettings.Production.json
+++ b/AgentService/appsettings.Production.json
@@ -10,6 +10,10 @@
   "GoogleCloud": {
     "ProjectId": "agent-as-a-service-459620"
   },
+  "DocumentStore": {
+    "Provider": "Firestore",
+    "ProjectId": "agent-as-a-service-459620"
+  },
   "AgentService": {
     "AllowedServiceEmails": "orchestrator@agent-as-a-service-459620.iam.gserviceaccount.com,agent-service@agent-as-a-service-459620.iam.gserviceaccount.com"
   },
