--- a/OrchestratorService/appsettings.Development.json
+++ b/OrchestratorService/appsettings.Development.json
@@ -8,6 +8,10 @@
   "GoogleCloud": {
     "ProjectId": "your-dev-project-id"
   },
+  "DocumentStore": {
+    "Provider": "LiteDb",
+    "ConnectionString": "data/orchestrator.db"
+  },
   "AllowedOrigins": [
     "https://localhost:7001",
     "https://localhost:7002",
