--- a/OrchestratorService/appsettings.Production.json
+++ b/OrchestratorService/appsettings.Production.json
@@ -10,6 +10,10 @@
   "GoogleCloud": {
     "ProjectId": "agent-as-a-service-459620"
   },
+  "DocumentStore": {
+    "Provider": "Firestore",
+    "ProjectId": "agent-as-a-service-459620"
+  },
   "Authentication": {
     "Google": {
       "ClientId": "${GOOGLE_CLIENT_ID}"
