--- a/OrchestratorService/OrchestratorService.csproj
+++ b/OrchestratorService/OrchestratorService.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="../AgentService/AgentService.csproj" />
     <ProjectReference Include="..\SharedLib\SharedLib.csproj" />
   </ItemGroup>
 
