Update environment configurations and add new features
- Changed default port from 8080 to 7001 in Program.cs and launchSettings.json.
- Updated DocumentStore connection string in appsettings.Development.json.
- Added appsettings.Staging.json and appsettings.Testing.json for environment-specific configurations.
- Enhanced NavMenu with a new API test link and introduced ApiTest.razor for connectivity testing.
- Configured HTTP clients in Program.cs for easier development testing.
- Updated authentication settings for Google OAuth across environment files.
- Added ENVIRONMENT_CONFIGURATION.md for comprehensive environment details.
- Created WEBAPP_ANALYSIS.md to document identified issues.
- Introduced seed-test-data.ps1 and setup-environment.ps1 scripts for improved development workflow.
- Updated test-document-store-migration.ps1 for correct storage provider configurations.

--- a/OrchestratorService/appsettings.Development.json
+++ b/OrchestratorService/appsettings.Development.json
@@ -10,11 +10,13 @@
   },
   "DocumentStore": {
     "Provider": "LiteDb",
-    "ConnectionString": "data/orchestrator.db"
+    "ConnectionString": "local-storage/orchestrator.db"
   },
   "AllowedOrigins": [
     "https://localhost:7001",
-    "https://localhost:7002",
-    "http://localhost:5000"
+    "https://localhost:7002", 
+    "http://localhost:5000",
+    "http://localhost:5264",
+    "https://localhost:5264"
   ]
 }
