--- a/OrchestratorWebApp/wwwroot/appsettings.Staging.json
+++ b/OrchestratorWebApp/wwwroot/appsettings.Staging.json
@@ -1,12 +1,12 @@
 {
   "Authentication": {
     "Google": {
-      "ClientId": "your-google-client-id.apps.googleusercontent.com",
+      "ClientId": "your-staging-google-client-id.apps.googleusercontent.com",
       "Authority": "https://accounts.google.com"
     }
   },
   "OrchestratorService": {
-    "BaseUrl": "http://localhost:8080"
+    "BaseUrl": "https://orchestrator-staging.example.com"
   },
   "Logging": {
     "LogLevel": {
