--- a/OrchestratorWebApp/wwwroot/appsettings.json
+++ b/OrchestratorWebApp/wwwroot/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "OrchestratorService": {
-    "BaseUrl": "https://localhost:7002"
+    "BaseUrl": "http://localhost:8080"
   },
   "Logging": {
     "LogLevel": {
