--- a/OrchestratorService/Properties/launchSettings.json
+++ b/OrchestratorService/Properties/launchSettings.json
@@ -6,18 +6,17 @@
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "ASPNETCORE_URLS": "http://0.0.0.0:8080"
+        "PORT": "8080"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5215"
+      "applicationUrl": "http://localhost:8080"
     },
     "https": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "ASPNETCORE_URLS": "http://0.0.0.0:8080"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7235;http://localhost:5215"
