--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -74,9 +74,9 @@ jobs:
         with:
           category: "/language:${{matrix.language}}"
           
-      # Upload results to GitHub Security tab
-      - name: Upload CodeQL results
-        uses: github/codeql-action/upload-sarif@e2b3eafc8d227b0241d48be5f425d47c2d750a13 # v3.26.10
-        if: always()
-        with:
-          sarif_file: ../results/
+      # # Upload results to GitHub Security tab
+      # - name: Upload CodeQL results
+      #   uses: github/codeql-action/upload-sarif@e2b3eafc8d227b0241d48be5f425d47c2d750a13 # v3.26.10
+      #   if: always()
+      #   with:
+      #     sarif_file: ../results/
