setcorrect url for Orchestrator service to reachAgemtService API

--- a/OrchestratorService/appsettings.json
+++ b/OrchestratorService/appsettings.json
@@ -15,7 +15,7 @@
     }
   },
   "AgentService": {
-    "BaseUrl": "https://agent-service-url",
+    "BaseUrl": "https://localhost:7164",
     "ServiceAccountEmail": "orchestrator@your-project.iam.gserviceaccount.com"
   },
   "AllowedOrigins": [
