set correct ASP.Net urls for development

--- a/OrchestratorService/Properties/launchSettings.json
+++ b/OrchestratorService/Properties/launchSettings.json
@@ -5,11 +5,10 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "PORT": "8080"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:8080"
+      "applicationUrl": "https://localhost:7235;http://localhost:5215"
     },
     "https": {
       "commandName": "Project",
