--- a/AgentService/Properties/launchSettings.json
+++ b/AgentService/Properties/launchSettings.json
@@ -1,14 +1,15 @@
 {
-  "profiles": {    "http": {
+  "profiles": {
+    "http": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "PORT": "7001"
+        "ASPNETCORE_ENVIRONMENT": "Development"
+        //"PORT": "7001"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:7001"
+      "applicationUrl": "https://localhost:7164;http://localhost:5211"
     },
     "https": {
       "commandName": "Project",
