--- a/OrchestratorWebApp/wwwroot/appsettings.Development.json
+++ b/OrchestratorWebApp/wwwroot/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "OrchestratorService": {
-    "BaseUrl": "http://localhost:8080"
+    "BaseUrl": "https://localhost:7235"
   },
   "Logging": {
     "LogLevel": {
