Update GoogleCloud ProjectId in configuration files
Changed the `ProjectId` in `appsettings.Development.json`
and `appsettings.json` from placeholder values to
`agent-as-a-service-459620`, configuring the application
to use a specific Google Cloud project for both
development and production environments.

--- a/AgentService/appsettings.Development.json
+++ b/AgentService/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "GoogleCloud": {
-    "ProjectId": "your-dev-project-id"
+    "ProjectId": "agent-as-a-service-459620"
   },
   "DocumentStore": {
     "Provider": "LiteDb",
