--- a/OrchestratorService/appsettings.json
+++ b/OrchestratorService/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "GoogleCloud": {
-    "ProjectId": "your-project-id"
+    "ProjectId": "agent-as-a-service-459620"
   },
   "Authentication": {
     "Google": {
