--- a/AgentService/appsettings.json
+++ b/AgentService/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "GoogleCloud": {
-    "ProjectId": "your-project-id"
+    "ProjectId": "agent-as-a-service-459620"
   },
   "AgentService": {
     "AllowedServiceEmails": "orchestrator@your-project.iam.gserviceaccount.com,agent-service@your-project.iam.gserviceaccount.com"
