--- a/OrchestratorService/appsettings.Development.json
+++ b/OrchestratorService/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "GoogleCloud": {
-    "ProjectId": "your-dev-project-id"
+    "ProjectId": "agent-as-a-service-459620"
   },
   "DocumentStore": {
     "Provider": "LiteDb",
