--- a/CollaboratorService/Properties/launchSettings.json
+++ b/CollaboratorService/Properties/launchSettings.json
@@ -6,7 +6,8 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5137"
+      "applicationUrl": "http://localhost:5137",
+      "launchUrl": "swagger"
     },
     "https": {
       "commandName": "Project",
@@ -14,7 +15,8 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7278;http://localhost:5137"
+      "applicationUrl": "https://localhost:7278;http://localhost:5137",
+      "launchUrl": "swagger"
     },
     "Container (Dockerfile)": {
       "commandName": "Docker",
