--- a/AgentService/Dockerfile
+++ b/AgentService/Dockerfile
@@ -14,7 +14,7 @@ RUN dotnet build "AgentService.csproj" -c Release -o /app/build
 FROM build AS publish
 RUN dotnet publish "AgentService.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
-FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS final
+FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
 
