--- a/CollaboratorService/Dockerfile
+++ b/CollaboratorService/Dockerfile
@@ -1,7 +1,8 @@
 # See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
 # This stage is used when running from VS in fast mode (Default for Debug configuration)
-FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
+FROM ghcr.io/nam20485/aspnet-prebuild:1.0.1
+# FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
 USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
@@ -27,4 +28,4 @@ RUN dotnet publish "./CollaboratorService.csproj" -c $BUILD_CONFIGURATION -o /ap
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "CollaboratorService.dll"]
+ENTRYPOINT ["dotnet", "CollaboratorService.dll"]+
