--- a/AgentService/AgentService.csproj
+++ b/AgentService/AgentService.csproj
@@ -9,14 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="FirebaseAdmin" Version="3.2.0" />
-    <PackageReference Include="Google.Cloud.Firestore" Version="3.10.0" />
-    <PackageReference Include="HashiCorp.Cdktf" Version="0.21.0" />
-    <PackageReference Include="HashiCorp.Cdktf.Providers.Docker" Version="12.0.2" />
-    <PackageReference Include="HashiCorp.Cdktf.Providers.Github" Version="15.0.0" />
-    <PackageReference Include="HashiCorp.Cdktf.Providers.Google" Version="16.1.0" />
-    <PackageReference Include="HashiCorp.Cdktf.Providers.Helm" Version="11.0.0" />
-    <PackageReference Include="HashiCorp.Cdktf.Providers.Kubernetes" Version="12.0.0" />
-    <PackageReference Include="HashiCorp.Cdktf.Providers.Local" Version="11.0.0" />
+    <PackageReference Include="Google.Cloud.Firestore" Version="3.10.0" />  
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.6" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.1" />
     <PackageReference Include="Google.Cloud.AIPlatform.V1" Version="3.34.0" />
@@ -27,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CollaboratorService\CollaboratorService.csproj" />
     <ProjectReference Include="..\SharedLib\SharedLib.csproj" />
   </ItemGroup>
 
