--- a/SharedLib/SharedLib.csproj
+++ b/SharedLib/SharedLib.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HashiCorp.Cdktf" Version="0.21.0" />
+    <PackageReference Include="HashiCorp.Cdktf.Providers.Docker" Version="12.0.2" />
     <PackageReference Include="Octokit" Version="14.0.0" />
     <PackageReference Include="Google.Cloud.Firestore" Version="3.10.0" />
     <PackageReference Include="LiteDB" Version="5.0.21" />
