--- a/AgentService/Dockerfile
+++ b/AgentService/Dockerfile
@@ -12,7 +12,7 @@ WORKDIR "/src/AgentService"
 RUN dotnet build "AgentService.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "AgentService.csproj" -c Release -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "AgentService/AgentService.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
