--- a/OrchestratorService/Dockerfile
+++ b/OrchestratorService/Dockerfile
@@ -12,7 +12,7 @@ WORKDIR "/src/OrchestratorService"
 RUN dotnet build "OrchestratorService.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "OrchestratorService.csproj" -c Release -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "OrchestratorService/OrchestratorService.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS final
 WORKDIR /app
