Implement comprehensive testing infrastructure fixes
- Fix coverage exclusion pattern in Directory.Build.targets
  * Change [*.Tests*]* to [*.Tests]*,[*.Test]* for proper exclusion
- Improve DateTime assertion reliability in ProjectTests
  * Capture DateTime.UtcNow before test execution to prevent flaky tests
- Add null handling validation test in RepositoryTests
  * New test validates graceful handling of null values in business logic
- Update pr-approval-and-merge assignment documentation
  * Add requirement for implementation completion confirmation

Addresses PR#29 review comments and issue #23 testing infrastructure

--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -8,7 +8,7 @@
     <ExcludeByFile>**/bin/**/*;**/obj/**/*;**/*AssemblyInfo.cs</ExcludeByFile>
     <ExcludeByAttribute>Obsolete,GeneratedCodeAttribute,CompilerGeneratedAttribute</ExcludeByAttribute>
     <Include>[*]*</Include>
-    <Exclude>[*.Tests*]*,[xunit.*]*,[FluentAssertions.*]*,[Moq.*]*</Exclude>
+    <Exclude>[*.Tests]*,[*.Test]*,[xunit.*]*,[FluentAssertions.*]*,[Moq.*]*</Exclude>
     <ThresholdType>line</ThresholdType>
     <Threshold>0</Threshold>
     <ThresholdStat>total</ThresholdStat>
